--- a/slides/slide01.qmd
+++ b/slides/slide01.qmd
@@ -25,12 +25,14 @@ format:
 
 ```{r}
 #| include: false
-library(tidyverse)
+pacman::p_load(tidyverse, gt)
 knitr::opts_chunk$set(dev       = "ragg_png",
                       dpi       = 300,
                       fig.align = "center",
                       echo      = TRUE)
 ```
+
+<!-- -->
 
 ## 講義概要
 
@@ -50,3 +52,175 @@ knitr::opts_chunk$set(dev       = "ragg_png",
    * 未修の場合、{dplyr}、{tidyr}、{ggplot2}に関する知識が必要。
    * ブラインドタッチが出来ること。
 
+<!-- -->
+
+## 講義内容
+
+* **第1回:** ガイダンス
+* **第2回:** リサーチデザイン（1）
+* **第3回:** リサーチデザイン（2）
+* **第4回:** 記述統計
+* **第5回:** 統計的推定
+* **第6回:** 統計的仮説検定
+* **第7回:** 変数間の関係
+* **第8回:** 回帰分析（1）
+* **第9回:** 回帰分析（2）
+* **第10回:** 回帰分析（3）
+* **第11回:** 交互作用
+* **第12回:** 分析結果の可視化
+* **第13回:** ロジスティック回帰分析
+* **第14回:** 期末レポートの執筆 	
+* **第15回:** 期末レポートの執筆 	
+
+<!-- -->
+
+## 使用ツール: R
+
+R/RStudioのインストール方法は紹介しない
+
+* 使用するR/RStudioはNIIオンライン分析システム
+   * 使い方は「ミクロ政治データ分析実習」（前期）で紹介
+   * 使い方の復習は「ミクロ政治データ分析実習」の[サポートページ]()、[教科書]()を参照すること
+   * 「ミクロ政治データ分析実習」未修者の場合は速やかに宋に相談
+
+:::{layout-ncol=2}
+
+```{r}
+#| echo: false
+knitr::include_graphics("Figs/01/R.png")
+```
+
+```{r}
+#| echo: false
+knitr::include_graphics("Figs/01/RStudio.png")
+```
+
+:::
+
+<!-- -->
+
+## 前提知識
+
+「ミクロ政治データ分析実習」を履修していること。
+
+* Rを使うのは第4回（10月13日）から
+   * 未修者の場合は10月12日まで以下の内容を習得しておくこと。
+
+```{r}
+#| echo: false
+tibble(
+   x = c("データの入出力", "データ型とデータ構造",
+         "R Markdown", "{dplyr}と{tidyr}を用いたデータハンドリング",
+         "{ggplot2}を用いた可視化"),
+   y = c("第6、7章", "第8、9章", "第21章",
+         "第12、13、14、15章", "第17、18、19章"),
+   z = c("第3回", "第7、8回", "第5回",
+         "第9、10、11回", "第12、13、14回")) %>%
+   gt() %>%
+   cols_label("x" = "内容", "y" = "『私たちのR』", 
+              "z" = "「ミクロ政治データ分析実習」") %>%
+   tab_options(table.font.size = "24px")
+```
+
+<!-- -->
+
+##
+
+<span class="sec-title">教科書・参考書</span>
+
+<!-- -->
+
+## 教科書
+
+浅野正彦・矢内勇生. 2018.『[Rによる計量政治学](https://www.amazon.co.jp/dp/4274223132/)』オーム社.
+
+* サポートページ: <https://github.com/yukiyanai/quant-methods-R>
+   * データ、解説資料、正誤表など
+
+```{r}
+#| echo: false
+#| out-width: "300px"
+knitr::include_graphics("Figs/01/Textbook.jpg")
+```
+
+<!-- -->
+
+## 参考書
+
+* 飯田健. 2013. 『[計量政治分析](https://www.amazon.co.jp/dp/4320019245/)』共立出版
+* 今井耕介 (著).  粕谷祐子・原田勝孝・久保浩樹（訳）. 2018. 『社会科学のためのデータ分析入門（[上](https://www.amazon.co.jp/dp/400061245X/)/[下](https://www.amazon.co.jp/dp/4000612468/)）』岩波書店
+
+:::{layout-ncol=3}
+
+```{r}
+#| echo: false
+#| out-width: "300px"
+knitr::include_graphics("Figs/01/Reference_DA1.jpg")
+```
+
+```{r}
+#| echo: false
+#| out-width: "300px"
+knitr::include_graphics("Figs/01/Reference_DA2.jpg")
+```
+
+```{r}
+#| echo: false
+#| out-width: "300px"
+knitr::include_graphics("Figs/01/Reference_DA3.jpg")
+```
+
+:::
+
+<!-- -->
+
+## 副読本
+
+Rの使い方については以下の本がおすすめ
+
+* Song Jaehyun・矢内勇生.『[私たちのR: ベストプラクティスの探究](https://www.jaysong.net/RBook/)』(web-book)
+   * **無料:** https:/www.jaysong.net/RBook/
+* 松村優哉・湯谷啓明・紀ノ定保礼・前田和寛. 2021. 『[改訂2版 RユーザのためのRStudio[実践]入門](https://www.amazon.co.jp/dp/4297121700/)』技術評論社
+* Garrett Grolemund and Hadley Wickham. 2017. [*R for Data Science.*](https://r4ds.had.co.nz) O'Reilly.
+   * 邦訳『Rではじめるデータサイエンス』
+   * **原著は無料:** https://r4ds.had.co.nz/
+* Jared P. Lander. 2018. [*R for Everyone.*](https://www.amazon.co.jp/dp/4839962154) Addison-Wesley Professional. 
+   * 邦訳『みんなのR』
+
+<!-- -->
+
+##
+
+<span class="sec-title">評価</span>
+
+<!-- -->
+
+
+## 成績評価
+
+* **平常点** (30%)
+   * 欠席6回以上は評価の対象外（5回まで評価対象）
+      * ただし、5回欠席の場合、単位取得は実質困難
+   * 45分以上欠席は出席0.5回扱い
+   * 欠席届を提出した場合は出席扱い
+* **課題** (35%)
+   * 課題は計5回
+   * 3回以上未提出は評価の対象外（2回までは評価対象）
+* **期末レポート** (35%)
+   * 自分独自の問いを立て、その問いに答えるための過程と結果を記録したレポート
+   * 授業の第14・15回は期末レポートの執筆
+* 評価の対象は「採点の対象」であることを意味し、単位を保障するものではない。
+
+<!-- -->
+
+## オフィス・アワー
+
+宋、またはTAが研究室に待機し、事前予約**なし**に相談、質問などが可能な時間
+
+* 毎週**火曜日3限**（13時00分〜14時30分）
+   * 宋が対応
+* 毎週**木曜日3・5限**（13時00分〜14時30分/16時20分〜17時50分）
+   * 3限目TAのみ、5限目は宋とTAが対応
+* 場所：**TA227**研究室（A棟の2階）
+* 上記の時間外は事前予約が必要（メール、対面）
+   * メール: <song@kansai-u.ac.jp>
