--- a/intro/install.qmd
+++ b/intro/install.qmd
@@ -10,6 +10,12 @@ knitr::opts_chunk$set(echo      = FALSE,
                       fig.align = "center")
 ```
 
+:::{.callout-important}
+## 「ミクロ政治データ分析実習」未修者の場合
+
+本サポートページの「Rの使い方」は前期の「ミクロ政治データ分析実習」の資料である。未修者は必ず宋に相談すること。
+:::
+
 ## 初期設定
 
 　本講義の実習は**NIIオンライン分析システムの使用を推奨**する。自分のPCにインストールしたR + RStudio、RStuio.cloud、大学PCにインストールされているR + RStudioなどの使用を妨げないが[^univ-r]、本ページの資料と同じ結果が得られることは保証しない。また、実習・分析中に起きた不具合についても授業中には対応しない（オフィスアワーなどでは対応可能）。
