--- a/slides/slide01.qmd
+++ b/slides/slide01.qmd
@@ -222,5 +222,27 @@ Rの使い方については以下の本がおすすめ
 * 毎週**木曜日3・5限**（13時00分〜14時30分/16時20分〜17時50分）
    * 3限目TAのみ、5限目は宋とTAが対応
 * 場所：**TA227**研究室（A棟の2階）
-* 上記の時間外は事前予約が必要（メール、対面）
+* 上記の時間外は事前予約が必要（LMS、メール、対面）
    * メール: <song@kansai-u.ac.jp>
+
+<!-- -->
+
+## フィードバックについて
+
+授業内容に関する質問・相談の窓口
+
+1. オフィスアワーの利用
+   * 最も確実な方法
+1. LMSの質問コーナー（匿名投稿可能）
+1. LMSのメッセージ
+   * **メッセージの1行目は宛先を明記する**こと
+1. Zoom
+   * LMSの質問コーナー、メッセージを使って事前に日程調整が必要
+1. Discord
+   * 今後、Discordを使って相談する予定がある場合は宋に自分のユーザー名とタグを事前に伝えておくこと。宋がDiscordオンライン状態であれば、いつでも質問・相談可
+
+:::{.callout-note icon=false}
+### LMSを使用する場合
+
+**17時以降の質問**に対する回答はなるべく早めにするが、翌日になる可能性もあることに注意すること。**質問コーナー**は宋・TAが確認できるため、**メッセージ**よりも早めに回答が得られるかも知れない。とりわけ、**課題提出日**には質問が非常に多く寄せられている。全ての質問に回答する場合、提出期限を過ぎて回答するケースも多いため、課題は余裕を持って取り組むこと。
+:::
