--- a/about.qmd
+++ b/about.qmd
@@ -42,23 +42,23 @@ knitr::opts_chunk$set(fig.align = "center",
 
 ## 講義内容
 
-| 回 | 内容                   | 教科書     |
-|:--:|------------------------|------------|
-|  1 | ガイダンス             |            |
-|  2 | リサーチデザイン（1）  | 第1〜3章   |
-|  3 | リサーチデザイン（2）  | 同上       |
-|  4 | 記述統計               | 第6章      |
-|  5 | 統計的推定             | 第7章      |
-|  6 | 統計的仮説検定         | 第8章      |
-|  7 | 変数間の関係           | 第9章      |
-|  8 | 回帰分析（1）          | 第10〜13章 |
-|  9 | 回帰分析（2）          | 同上       |
-| 10 | 回帰分析（3）          | 同上       |
-| 11 | 交互作用               | 第14章     |
-| 12 | 分析結果の可視化       |            |
-| 13 | ロジスティック回帰分析 | 第15章     |
-| 14 | 期末レポートの執筆     |            |
-| 15 | 期末レポートの執筆     |            |
+| 回 | 年月日         |  内容                   | 教科書     |
+|:--:|:---------------|:------------------------|:-----------|
+|  1 | 2022年 9月22日 | ガイダンス              |            |
+|  2 | 2022年 9月29日 |  リサーチデザイン（1）  | 第1〜3章   |
+|  3 | 2022年10月 6日 |  リサーチデザイン（2）  | 同上       |
+|  4 | 2022年10月13日 |  記述統計               | 第6章      |
+|  5 | 2022年10月20日 |  統計的推定             | 第7章      |
+|  6 | 2022年10月27日 |  統計的仮説検定         | 第8章      |
+|  7 | 2022年11月10日 |  変数間の関係           | 第9章      |
+|  8 | 2022年11月17日 |  回帰分析（1）          | 第10〜13章 |
+|  9 | 2022年11月24日 |  回帰分析（2）          | 同上       |
+| 10 | 2022年12月 1日 |  回帰分析（3）          | 同上       |
+| 11 | 2022年12月 8日 |  交互作用               | 第14章     |
+| 12 | 2022年12月15日 |  分析結果の可視化       |            |
+| 13 | 2022年12月22日 |  ロジスティック回帰分析 | 第15章     |
+| 14 | 2023年 1月12日 |  期末レポートの執筆     |            |
+| 15 | 2023年 1月19日 |  期末レポートの執筆     |            |
 
 ## 本講義の位置づけ
 
@@ -127,7 +127,7 @@ ggplot() +
 
 ## 教科書
 
-* 浅野正彦・矢内勇生. 2018. 『[Rによる計量政治学](https://www.amazon.co.jp/dp/4274223132)』オーム社
+* 浅野正彦・矢内勇生. 2018. 『[Rによる計量政治学](https://www.amazon.co.jp/dp/4274223132)』オーム社.
 
 ```{r}
 #| echo: false
@@ -137,7 +137,7 @@ knitr::include_graphics("Figs/Syllabus/Textbook.jpg")
 
 ## 参考書（データ分析）
 
-* 飯田健. 2013. 『[計量政治分析](https://www.amazon.co.jp/dp/4320019245/)』共立出版
+* 飯田健. 2013. 『[計量政治分析](https://www.amazon.co.jp/dp/4320019245/)』共立出版.
 * 今井耕介 著. 粕谷祐子・原田勝孝・久保浩樹 訳. 2018. 『社会科学のためのデータ分析入門([上](https://www.amazon.co.jp/dp/400061245X/)/[下](https://www.amazon.co.jp/dp/4000612468/))』有斐閣.
 
 ::: {layout-ncol=3}
@@ -162,7 +162,7 @@ knitr::include_graphics("Figs/Syllabus/Reference_DA3.jpg")
 
 ## 参考書（R）
 
-* 松村優哉 他. 2021. 『[改訂2版 RユーザのためのRStudio[実践]入門](https://www.amazon.co.jp/dp/4297121700/)』技術評論社
+* 松村優哉 他. 2021. 『[改訂2版 RユーザのためのRStudio[実践]入門](https://www.amazon.co.jp/dp/4297121700/)』技術評論社.
 * Garrett Grolemund and Hadley Wickham. 2017. [*R for Data Science.*](https://r4ds.had.co.nz) O'Reilly.
    * 邦訳『Rではじめるデータサイエンス』(**原著は無料:** <https://r4ds.had.co.nz/>)
 * Song Jaehyun・矢内勇生.『[私たちのR: ベストプラクティスの探求](https://www.jaysong.net/RBook)』Web-book.
@@ -190,20 +190,22 @@ knitr::include_graphics("Figs/Syllabus/Reference_R3.jpg")
 
 ## 成績評価
 
-* **平常点** (20%)
-   * 学生証を持参すること（カードリーダーで出席を確認）
+* **平常点** (30%)
    * 欠席4回以上は評価の対象外（3回まで評価対象）
-* **課題** (50%)
-   * 計8〜9回の課題を予定
-   * 未提出4回以上は評価の対象外（3回まで評価対象）
+   * 45分以上欠席は出席0.5回扱い
+   * 欠席届を提出した場合は出席扱い
+* **課題** (35%)
+   * 課題は計5 $\pm$ 1回を予定
+   * 3回以上未提出は評価の対象外（2回未提出までは評価対象）
    * 課題提出期限の延長はない (提出までの期間が長めであるため)
       * 提出期限は次回講義の前日23時59分まで
       * 期限内に提出出来なかった場合でも宋に連絡する必要はない (どうせ延ばしてくれない)。
-   * 不正行為厳禁
-* **期末レポート** (30%)
-   * 第15回の授業内に期末レポートを執筆
-   * 未提出者は評価の対象外
-   * 不正行為厳禁
+* **期末レポート** (35%)
+   * 自分独自の問いを立て、その問いに答えるための過程と結果を記録したレポート
+   * 未提出者は評価対象外
+   * 授業の第14・15回は期末レポートの執筆
+* 「評価対象」とは「採点の対象」であることを意味し、単位を保障するものではない。
+* 不正行為厳禁
 
 ## 注意事項
 
