--- a/index.qmd
+++ b/index.qmd
@@ -2,7 +2,7 @@
 title: ""
 ---
 
-本ウェブサイトは関西大学総合情報学部「**マクロ政治データ分析実習**（2022年度）」のサポートページです。本ページはPC画面での閲覧を推奨します。
+本ウェブサイトは関西大学総合情報学部「**マクロ政治データ分析実習**（2022年度）」のサポートページです。前期開講の「ミクロ政治データ分析実習」のサポートページは[こちら](https://www.jaysong.net/micro-book/)。本ページはPC画面での閲覧を推奨します。
 
 :::{.callout-tip}
 ## アイコン説明
