--- a/slides/slide01.qmd
+++ b/slides/slide01.qmd
@@ -253,17 +253,21 @@ Rの使い方については以下の本がおすすめ
 ## 成績評価
 
 * **平常点** (30%)
-   * 欠席6回以上は評価の対象外（5回まで評価対象）
-      * ただし、5回欠席の場合、単位取得は実質困難
+   * 欠席4回以上は評価の対象外（3回まで評価対象）
    * 45分以上欠席は出席0.5回扱い
    * 欠席届を提出した場合は出席扱い
 * **課題** (35%)
-   * 課題は計5回
-   * 3回以上未提出は評価の対象外（2回までは評価対象）
+   * 課題は計5 $\pm$ 1回を予定
+   * 3回以上未提出は評価の対象外（2回未提出までは評価対象）
+   * 課題提出期限の延長はない (提出までの期間が長めであるため)
+      * 提出期限は次回講義の前日23時59分まで
+      * 期限内に提出出来なかった場合でも宋に連絡する必要はない (どうせ延ばしてくれない)。
 * **期末レポート** (35%)
    * 自分独自の問いを立て、その問いに答えるための過程と結果を記録したレポート
+   * 未提出者は評価対象外
    * 授業の第14・15回は期末レポートの執筆
-* 評価の対象は「採点の対象」であることを意味し、単位を保障するものではない。
+* 「評価対象」とは「採点の対象」であることを意味し、単位を保障するものではない。
+* 不正行為厳禁
 
 <!-- -->
 
