--- a/about.qmd
+++ b/about.qmd
@@ -119,10 +119,11 @@ ggplot() +
    * フォルダー (ディレクトリ)の概念
    * `C:/AAA/BBB/CCC.txt` (Windows)や`~/AAA/BBB/CCC.text` (macOS / Linux)の意味が理解できること
    * 相対パス / 絶対パスの概念が理解できること
+   * 不安がある場合は本サポートページの「[本講義のためのファイル管理術](intro/filesystem.qmd)」を参照すること。
 * ブラインド・タッチ (**重要**)
-   * 期末レポートは第15回の授業**中**に執筆する。
-   * タイピングが遅いと、時間内に期末レポートの完成ができない。
-   * 第15回の授業までにブラインドタッチの練習を推奨
+   * タイピングが遅いと、実習で非常に苦労する。
+   * 第4回の授業までにブラインドタッチの練習を推奨
+      * グーグルで「タイピング練習」で検索すれば様々な情報が得られる。一日30分以上、2週間程度である程度出来るようになり、それ以降は意識しなくても上達していく。
    * この授業に限らず、現代社会で極めて重要なスキル
 
 ## 教科書
