--- a/intro/filesystem.qmd
+++ b/intro/filesystem.qmd
@@ -98,7 +98,7 @@ data.tree::as.Node(x)
 
 　もし、自分がこれから全ての作業を`Day03`という名のフォルダー内で完結するとする。つまり、保存するスクリプト（たとえば、`Script.R`）も`Day03`に保存し、図（たとえば、`FigureA.png`）は`Day03`の`Figs`フォルダーに、読み込む表形式データ（たとえば、`Day03_Data.csv`）も`Day03`の中の`Data`フォルダーに入れるとする。この場合、それぞれのファイルのパスは`Day03/Script.R`、`Day03/Figs/FigureA.png`、`Day03/Data/Day03_Data.csv`となる（作業フォルダーが`~/`であるため、`~/`は省略可能）。全ての作業が同じフォルダー（とその下位フォルダー）内で行うとしたら、パス名に`Day03`も不要な気がする。そこで必要なのがRStudioのプロジェクト機能である。
 
-　RStudioで`Day03`というプロジェクトを作成すると、`Day03`フォルダーが自動的に生成され、`Day03.Rproj`というファイルも生成される。プロジェクトを最上位フォルダーに作成したのであれば、`~/Day03/Day03.Rproj`ファイルが生成されるのである。ここでRStudioのFile > Open Projectでこの`Day03.Rproj`ファイルを開くとRStudio画面の右上にプロジェクト名が表示され、**作業フォルダーが`Day03.Rproj`が保存されているフォルダー、つまり`~/Day03`へ変更される**（プロジェクトが開かれていな場合は「Project: (None)」と表示される）。これは大変便利な機能である。なぜなら作業フォルダーまでのパスは全て省略可能だからだ。これまで`Day03/Script.R`、`Day03/Figs/FigureA.png`、`Day03/Data/Day03_Data.csv`だったパスが、それぞれ`Script.R`、`Figs/FigureA.png`、`Data/Day03_Data.csv`になる。
+　RStudioで`Day03`というプロジェクトを作成すると、`Day03`フォルダーが自動的に生成され、`Day03.Rproj`というファイルも生成される。プロジェクトを最上位フォルダーに作成したのであれば、`~/Day03/Day03.Rproj`ファイルが生成されるのである。ここでRStudioのFile > Open Projectでこの`Day03.Rproj`ファイルを開くとRStudio画面の右上にプロジェクト名が表示され、**作業フォルダーが`Day03.Rproj`が保存されているフォルダー、つまり`~/Day03`へ変更される**（プロジェクトが開かれていな場合は「Project: (None)」と表示される）。実際、NIIオンライン分析システムで`XXX`という名前のプロジェクトを生成し、そのプロジェクトを開けば作業フォルダーは`/home/joyvan/XXX/`（=`~/XXX/`）になる（`getwd()`で確認可能）。これは大変便利な機能である。なぜなら作業フォルダーまでのパスは全て省略可能だからだ。これまで`Day03/Script.R`、`Day03/Figs/FigureA.png`、`Day03/Data/Day03_Data.csv`だったパスが、それぞれ`Script.R`、`Figs/FigureA.png`、`Data/Day03_Data.csv`になる。
 
 　また、何らかの理由で`Day03`フォルダーの名前を`Day05`に変更したとしよう。もし、プロジェクト機能を使っていないのであれば、パスの`Day03`を全て`Day05`に変更する必要がある。しかし、プロジェクト機能を使っているのであれば、`.Rproj`ファイルが存在するフォルダーが作業フォルダーになるため、そもそもパスに`Day03`は存在しない。つまり、修正不要ということだ。ちなみに、プロジェクトを一旦作成したら、そのプロジェクトのフォルダー名や`.Rproj`ファイルの名前は自由に修正しても良いし、フォルダー名と`.Rproj`ファイルの名前が一致しなくても良い。
 
