--- a/intro/filesystem.qmd
+++ b/intro/filesystem.qmd
@@ -106,6 +106,14 @@ data.tree::as.Node(x)
 
 　このように**RStudioのプロジェクト機能は必須**といっても過言ではない。簡単な計算目的として使う場合は問題ないが、何かの分析をする時、授業の実習時、課題時には必ずRStudioの右上が「Project: (None)」になっていないことを確認しよう。
 
+:::{.callout-note}
+
+### 絶対パスと相対パス
+
+　これまで紹介したパスの書き方で`/`（Windowsなら`C:\`）から始まるパスは、**絶対パス**（absolute path）または**フルパス**（full path）と呼ばれる。これはファイル名を最上位フォルダーを起点に書く方法である。一方、`/`（Windowsなら`C:\`）で始まらないパスは**相対パス**（relative path）呼ばれ、ファイル名を作業フォルダーを起点に書く方法である。
+
+:::
+
 ## 本講義でおすすめするフォルダー構造
 
 　プロジェクトを作成すれば、プロジェクトフォルダー内に以下のようなフォルダーを作成しよう。
